2010-01-11  - BUG: the graphicsview is smaller than the area it visualizes?!    how to reproduce:     - compile last commit (not this one)     - start the program     - use the cursor keys, it will be able to move the graphicsView some pixels    FIXED with:    void movableGraphicsView::resizeEvent ( QResizeEvent * event ) {       setSceneRect(QRect(0, 0, width()-6, height()-6));

--- a/src/ui/mainWidget.ui
+++ b/src/ui/mainWidget.ui
@@ -32,6 +32,9 @@
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
       </property>
+      <property name="transformationAnchor">
+       <enum>QGraphicsView::AnchorViewCenter</enum>
+      </property>
       <property name="resizeAnchor">
        <enum>QGraphicsView::AnchorViewCenter</enum>
       </property>
